--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -28,4 +28,5 @@
 
 <br>
 
-<%= link_to 'New Location', new_location_path %>
+<%= link_to 'Add New Cities', new_location_path %>
+<%= link_to "Find the Distnace Between Two Cities", difference_path%>
